--- a/project/Layouts/spawned objects.xml
+++ b/project/Layouts/spawned objects.xml
@@ -37,11 +37,12 @@
                         <collisions>Enabled</collisions>
                     </properties>
                     <instance-variables>
-                        <id>1</id>
+                        <blerh>1</blerh>
                         <audioTag></audioTag>
                         <solo>false</solo>
-                        <master>false</master>
+                        <blerh2>false</blerh2>
                         <active>false</active>
+                        <picked>false</picked>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="Pin" />
